2010-07-23  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Roben.

        [WINCE] Buildfix for PluginDatabaseWin.cpp
        https://bugs.webkit.org/show_bug.cgi?id=41887

        Define KEY_ENUMERATE_SUB_KEYS only if not defined.

        * plugins/win/PluginDatabaseWin.cpp:

2010-07-23  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Chromium DevTools: migrate from utility context-based injected
        script dispatch to upstream schema.

        https://bugs.webkit.org/show_bug.cgi?id=42883

        * bindings/v8/ScriptProfile.cpp:
        (WebCore::ScriptProfile::title):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::getProfile):
        * inspector/front-end/InjectedScriptAccess.js:

2010-07-23  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: rolling out r63963.

        * bindings/v8/ScriptProfile.cpp:
        (WebCore::ScriptProfile::title):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::getProfile):
        * inspector/front-end/InjectedScriptAccess.js:

2010-07-23  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Chromium DevTools: migrate from utility context-based injected
        script dispatch to upstream schema.

        https://bugs.webkit.org/show_bug.cgi?id=42883

        * bindings/v8/ScriptProfile.cpp:
        (WebCore::ScriptProfile::title):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::getProfile):
        * inspector/front-end/InjectedScriptAccess.js:
        (InjectedScriptAccess.get if):
        (InjectedScriptAccess):

2010-07-23  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: error info propagation in InspectorBackendDispatch should be improved
        https://bugs.webkit.org/show_bug.cgi?id=42873
