@@ -1,3 +1,9 @@
+2010-07-23  Pavel Feldman  <pfeldman@chromium.org>
+
+        Not reviewed: Chromium tests fix.
+
+        * inspector/CodeGeneratorInspector.pm:
+
 2010-07-23  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Adam Roben.
